# plinks

./: Cargo.toml  README.md  TODO.md  default_browser.reg
src/: app.rs  main.rs  profile_loader.rs
src/ui/: console.rs  mod.rs
src/ui/gui/: mod.rs  select_profile.ui  select_profile.ui.qml
